[How to Start] Fix spacing and code font. Refs #4287

--- a/assets/Sass/start.sass
+++ b/assets/Sass/start.sass
@@ -54,10 +54,10 @@
     height: auto
 
   .gui-wallet-btn
-    background-color: $color-light-hover
+    background-color: $color-logo
     color: white
     &:hover
-      color: $color-black-bg
+      background-color: $color-light-hover
 
   .circle
     width: 10px
@@ -66,3 +66,6 @@
     border-radius: 50%
     display: -webkit-inline-box
 
+  .command
+    font-family: Monospace
+    font-size: 0.8rem
